# Agent

./: .env.example  .gitignore  README.md  main.py  makefile  pyproject.toml
_inventory/: agent-profile-inventory.tsv  duplicate-runtime-inventory.tsv  migration-map.tsv  project-disposition.tsv  tool-inventory.tsv
agent/: __init__.py  factory.py  schema.py
agent/assembly/: __init__.py  session.py
agent/audit/: __init__.py
agent/capabilities/: __init__.py  mcp_loading.py  skill_loading.py
agent/config/: __init__.py  loader.py  models.py  (+3 more)
app/: app.py  cli.py  web.py
cli/: __init__.py  commands.py  main.py  profiles.py  turns.py
config/: defaults.toml
deploy/: .dockerignore  Dockerfile  docker-compose.yml
docs/: architecture.md  module-map.md  roadmap.md  technical-design.md
gateway/: __init__.py  app.py  static_ui.py
requirements/: requirements.txt
tests/: test_agent_api.py  test_agent_assembly.py  test_agent_context.py  test_agent_factory.py  test_agent_foundations.py  test_agent_hooks.py  test_agent_model_protocols.py  test_agent_orchestration_workflows.py  test_agent_persistence.py  test_agent_providers.py  test_agent_runs.py  test_agent_runtime.py  test_agent_sandbox.py  test_agent_tasks.py  test_agent_tools.py  test_agent_web.py  test_architecture_boundaries.py  test_branding.py  test_cli_chat.py  test_config_loader.py  test_conversation_ui.py  test_frontend_structure.py  test_gateway_sessions.py  test_health.py  test_terminal_theme.py
tui/: package.json  tsconfig.json
web/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
(+358 files in other folders)
