[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agents"
version = "0.1.0"
description = "Agents framework with async model protocols and configurable runtime"
authors = [{ name = "Agents Team" }]
requires-python = ">=3.10"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "typer",
    "rich",
    "pydantic>=2",
    "pydantic-settings",
    "python-multipart",
    "mcp",
    "httpx[socks]",
    "tomli; python_version < '3.11'",
    "prompt-toolkit",
]

[project.optional-dependencies]
test = ["pytest", "httpx[socks]"]

[project.scripts]
agents = "cli.main:main"

[tool.setuptools.packages.find]
include = ["agent*", "gateway*", "cli*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = [
    "ignore:urllib3 v2 only supports OpenSSL 1.1.1+",
]
